--- a/imageViewCrop/imageViewCrop/Controller/Base.lproj/Main.storyboard
+++ b/imageViewCrop/imageViewCrop/Controller/Base.lproj/Main.storyboard
@@ -52,8 +52,8 @@
                                     <action selector="resetHome:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HBk-QG-Qeu"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zhg-HE-MAj">
-                                <rect key="frame" x="16" y="485" width="361" height="333"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.artframe" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zhg-HE-MAj">
+                                <rect key="frame" x="16" y="486.66666666666674" width="361" height="330"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="333" id="7jL-7W-JZK"/>
@@ -88,6 +88,7 @@
     </scenes>
     <resources>
         <image name="26" width="1920" height="1440"/>
+        <image name="photo.artframe" catalog="system" width="128" height="93"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
